# usgs_quake

./: .gitignore  README.md  app.py  docker-compose.yml  entrypoint.py  mypy.ini  pyproject.toml  settings.toml
api/: earthquake_detail_model.py  earthquake_model.py  fetch_and_transform_earthquake_detail.py  fetch_and_transform_earthquake_property.py
helpers/: flatten_data.py
notebook/: question_solutions.ipynb
postgresql/: connection.py  load_data_to_db.py
tests/functional/: __init__.py  test_api.py  test_jinja_template.py
utils/: template.py
utils/templates/: ddl_db.sql  ddl_table.sql  dml_count.sql  dml_unique_event_ids.sql
